--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typechain": "typechain --target ethers --outDir src/types 'src/contracts/**/*.json'"
   },
   "devDependencies": {
+    "typechain": "^1.0.5",
+    "typechain-target-ethers": "^1.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
   "dependencies": {
+    "@types/node": "^20.14.11",
     "@web3modal/ethers": "^5.0.7",
     "ethers": "^6.13.1"
   }
